# gmail-cleaner

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GMAIL_SERVICES_ANALYSIS.md  README.md  ROADMAP.md  SECURITY.md  build_app.py  docker-compose.yml  gmail-cleaner.spec  index.html  main.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-assign.yml  build.yml  pr-checks.yml
app/: main.py
app/api/: __init__.py  actions.py  setup.py
app/core/: config.py  exceptions.py  state.py
app/models/: schemas.py
app/services/: auth.py  gmail.py
app/services/gmail/: AGENTS.md  archive.py  delete.py  error_handler.py  labels.py  mark_read.py  scan.py
static/css/: components.css  filters.css
static/js/: AGENTS.md  auth.js  delete.js  filters.js  markread.js  notifications.js  scanner.js  ui.js
templates/: index.html
tests/: AGENTS.md  test_api_actions.py  test_schemas.py
tests/integration/: test_api_flows.py  test_error_scenarios.py  test_gmail_operations.py
tests/unit/services/auth/: test_credentials_handling_complete.py  test_oauth_flow_complete.py  test_sign_in_api.py  test_token_management_complete.py
